possible fix again to align-content first pink box?
I made explicitly defined the height of flex-start, center, and flex-end of the first pink box

--- a/assets/css/flexbox.css
+++ b/assets/css/flexbox.css
@@ -56,6 +56,12 @@ section.align-content:nth-child(6) {
   flex-wrap: wrap;
 }
 
+.align-content > .flex-start,
+.align-content > .flex-end,
+.align-content > .center {
+  height: 300px;
+}
+
 .align-content > .space-between,
 .align-content > .space-around {
   height: 200px;
